fixing previews on safari

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -91,6 +91,6 @@ html.dark {
   color: #fff;
 }
 
-.dark .nav-links a {
+.dark a {
   color: #fff;
 }
